# advanced-image-optimizer

./: LICENSE  README.md  requirements.txt  tests.py  update_packages.sh
c/: CMakeLists.txt
c/include/: optimizer.h  optimizer_ai.h  optimizer_common.h  optimizer_gpu.h
c/src/core/: optimizer.c
c/src/gpu/: cuda_kernels.cu
image_optimizer/: image_optimizer.py
image_optimizer/cli/: progress_bar.py
image_optimizer/core/: optimizer.py
image_optimizer/utils/: file_handler.py
python/: setup.py
python/optimizer/: __init__.py  optimizer.py
tests/: test_optimizer.py
windows/WinOptimizerWPF/: App.xaml  App.xaml.cs  MainWindow.xaml  WinOptimizerWPF.csproj
windows/WinOptimizerWPF/Commands/: AsyncRelayCommand.cs  RelayCommand.cs
windows/WinOptimizerWPF/Models/: FileItem.cs  OptimizerOptions.cs  OptimizerSettings.cs
windows/WinOptimizerWPF/Services/: DialogService.cs  IDialogService.cs  IOptimizerService.cs  ISettingsService.cs  OptimizerService.cs  SettingsService.cs
windows/WinOptimizerWPF/ViewModels/: MainViewModel.cs
windows/WinOptimizerWPF/Views/: MainWindow.xaml  MainWindow.xaml.cs
windows/shell_extension/: OptimizerShellExt.h
